=name changed for better readability

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
   },
   "autoload": {
     "psr-4": {
-      "Superbalist\\PubSub\\": "src/",
+      "milind\\PubSub\\": "src/",
       "Tests\\": "tests/"
     }
   },
